--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -97,6 +97,7 @@
     <Compile Include="FileExtensions.cs" />
     <Compile Include="ISlideLoader.cs" />
     <Compile Include="Markdown2.cs" />
+    <Compile Include="NullValidator.cs" />
     <Compile Include="Quizes\Quiz.cs" />
     <Compile Include="Quizes\QuizSlide.cs" />
     <Compile Include="Quizes\QuizBlock.cs" />
@@ -178,6 +179,7 @@
     <Compile Include="SlideAttribute.cs" />
     <Compile Include="TexReplacer.cs" />
     <Compile Include="Urls.cs" />
+    <Compile Include="ValidatorsRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CSharp\README.md" />
