--- a/src/Presentation/Presentation.csproj
+++ b/src/Presentation/Presentation.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Slides\U99_Presentation\S040_Attributes.cs" />
     <Compile Include="Slides\U99_Presentation\S041_Attributes2.cs" />
     <Compile Include="Slides\U99_Presentation\S042_Attributes3.cs" />
+    <Compile Include="Slides\U99_Presentation\S051_Gallery.cs" />
     <Compile Include="Slides\U99_Presentation\S050_Ideas.cs" />
     <Compile Include="Slides\U99_Presentation\_Attributes.cs" />
     <Compile Include="Slides\U99_Presentation\_AttrInitial.cs" />
@@ -69,6 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Slides\Title.txt" />
+    <Content Include="Slides\U99_Presentation\img\01-Стек и очередь.png" />
+    <Content Include="Slides\U99_Presentation\img\02-IEnumerable.png" />
+    <Content Include="Slides\U99_Presentation\img\03-Структуры.png" />
     <Content Include="Slides\U99_Presentation\Prelude.txt" />
     <Content Include="Slides\U99_Presentation\Title.txt" />
     <Content Include="Slides\U99_Presentation\Ящики.bmp" />
@@ -79,10 +83,13 @@
       <Name>uLearn</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rd /S /Q $(SolutionDir)uLearn.Web\Courses\$(ProjectName)\
-xcopy /Y /E $(ProjectDir)Slides $(SolutionDir)uLearn.Web\Courses\$(ProjectName)\</PostBuildEvent>
+    <PostBuildEvent>REM copy this post build step to new course
+del "$(OutDir)$(ProjectName).zip"
+"$(SolutionDir)..\tools\7z\7za.exe" a "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
+copy "$(OutDir)$(ProjectName).zip" $(SolutionDir)uLearn.Web\Courses.Staging\</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
