--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -39,10 +39,7 @@
 				<add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
 			</assemblies>
 		</compilation>
-		<httpRuntime 
-			targetFramework="4.5"
-			maxRequestLength="16000000"
-			/>
+		<httpRuntime targetFramework="4.5" maxRequestLength="16000000" />
 		<customErrors mode="Off" />
 
 		<httpModules>
@@ -109,6 +106,10 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.13.0" newVersion="4.2.13.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
