--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.1" targetFramework="net45" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
@@ -14,12 +15,16 @@
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl.Metadata" version="1.0.9-alpha" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="0.6.4033103-beta" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="0.6.4033103-beta" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.2-rc" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
