--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -234,13 +234,16 @@
     <Compile Include="CsSandboxClient\CsSandboxClientException.cs" />
     <Compile Include="CsSandboxClient\PublicSubmissionDetails.cs" />
     <Compile Include="CsSandboxClient\Submission.cs" />
-    <Compile Include="CsSandboxClient\SubmissionDetailsExtensions.cs" />
     <Compile Include="CsSandboxClient\SubmissionModel.cs" />
     <Compile Include="CsSandboxClient\SubmissionStatus.cs" />
     <Compile Include="CsSandboxClient\Verdict.cs" />
     <Compile Include="DataContexts\TextsRepo.cs" />
     <Compile Include="ExecutionService\IdeoneService.cs" />
     <Compile Include="ExecutionService\StringExtention.cs" />
+    <Compile Include="Migrations\201501281400301_ExecutionServiceName.cs" />
+    <Compile Include="Migrations\201501281400301_ExecutionServiceName.Designer.cs">
+      <DependentUpon>201501281400301_ExecutionServiceName.cs</DependentUpon>
+    </Compile>
     <Compile Include="SubmitAllSlide_Test.cs" />
     <Compile Include="ExecutionServiceMigration_Test.cs" />
     <Compile Include="ExecutionService\CsSandboxService.cs" />
@@ -459,6 +462,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201412040905024_TextBlobLimits.resx">
       <DependentUpon>201412040905024_TextBlobLimits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501281400301_ExecutionServiceName.resx">
+      <DependentUpon>201501281400301_ExecutionServiceName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
