--- a/src/courses/AIML/AIML.csproj
+++ b/src/courses/AIML/AIML.csproj
@@ -43,6 +43,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S00 - Рождение теории 1936-1956.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S01 - Золотой век 1956-1976.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S02 - Кризис нейронных сетей 1969-1980.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S03 - Первая зима 1975-1980.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S04 - Краткое возвращение 1980-1984.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S05 - Вторая зима 1984-1993.cs" />
+    <Compile Include="Slides\L00 - История искусственного интеллекта\S06 - Новая эра 1993-н.в..cs" />
     <Compile Include="Slides\L01 - Логика высказываний\S00 - Введение в логику.cs" />
     <Compile Include="Slides\L01 - Логика высказываний\S01 - Индуктивные и дедуктивные рассуждения.cs" />
     <Compile Include="Slides\L01 - Логика высказываний\S02 - Логика высказываний.cs" />
@@ -53,9 +60,23 @@
     <Compile Include="Slides\L01 - Логика высказываний\S07 - Метод резолюций.cs" />
     <Compile Include="Slides\L01 - Логика высказываний\S08 - Устройство экспертных систем.cs" />
     <Compile Include="Slides\L01 - Логика высказываний\S09 - Применение экспертных систем.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S00 - Логика предикатов.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S01 - Предваренная нормальная форма.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S02 - Сколемовская нормальная форма.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S03 - Правило резолюций. Унификация.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S04 - Доказательство теорем.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S05 - Поиск теорем.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S06 - Пруверы и их применение.cs" />
+    <Compile Include="Slides\L02 - Логика предикатов\S07 - Логическое программирование.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Slides\L00 - История искусственного интеллекта\_S00-slides.pdf" />
+    <None Include="Slides\L00 - История искусственного интеллекта\_S01-slides.pdf" />
+    <None Include="Slides\L00 - История искусственного интеллекта\_S02-slides.pdf" />
+    <None Include="Slides\L00 - История искусственного интеллекта\_S03-slides.pdf" />
+    <None Include="Slides\L00 - История искусственного интеллекта\_S04-slides.pdf" />
+    <None Include="Slides\L00 - История искусственного интеллекта\_S06-slides.pdf" />
     <None Include="Slides\L01 - Логика высказываний\_S00-slides.pdf" />
     <None Include="Slides\L01 - Логика высказываний\_S01-slides.pdf" />
     <None Include="Slides\L01 - Логика высказываний\_S02-slides.pdf" />
@@ -64,9 +85,18 @@
     <None Include="Slides\L01 - Логика высказываний\_S05-slides.pdf" />
     <None Include="Slides\L01 - Логика высказываний\_S07-slides.pdf" />
     <None Include="Slides\L01 - Логика высказываний\_S08-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S00-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S01-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S02-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S03-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S04-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S05-slides.pdf" />
+    <None Include="Slides\L02 - Логика предикатов\_S07-slides.pdf" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Slides\L00 - История искусственного интеллекта\Title.txt" />
     <Content Include="Slides\L01 - Логика высказываний\Title.txt" />
+    <Content Include="Slides\L02 - Логика предикатов\Title.txt" />
     <Content Include="Slides\Title.txt" />
   </ItemGroup>
   <ItemGroup>
