add index and optimize query for AcceptedSolutions

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -221,6 +221,10 @@
     <Compile Include="Migrations\201412040905024_TextBlobLimits.Designer.cs">
       <DependentUpon>201412040905024_TextBlobLimits.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502041429186_AcceptedSolutionsIndex.cs" />
+    <Compile Include="Migrations\201502041429186_AcceptedSolutionsIndex.Designer.cs">
+      <DependentUpon>201502041429186_AcceptedSolutionsIndex.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\TextBlob.cs" />
     <Compile Include="CreateListOfUsedTokens.cs" />
     <Compile Include="Ideone\ExecutionService.Settings.Sample.cs" />
@@ -425,6 +429,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201412040905024_TextBlobLimits.resx">
       <DependentUpon>201412040905024_TextBlobLimits.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502041429186_AcceptedSolutionsIndex.resx">
+      <DependentUpon>201502041429186_AcceptedSolutionsIndex.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
