--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/courses/BasicProgramming"]
 	path = src/courses/BasicProgramming
-	url = git@github.com:urfu-code/BasicProgramming.git
+	url = https://github.com/urfu-code/BasicProgramming
