--- a/src/Selenium/Selenium.csproj
+++ b/src/Selenium/Selenium.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainClass.cs" />
-    <Compile Include="Tests\UlearnDriverTest.cs" />
+    <Compile Include="UlearnTests\UlearnDriverTest.cs" />
     <Compile Include="UlearnDriver\PageObjects\Hint.cs" />
     <Compile Include="UlearnDriver\PageObjects\LikeButton.cs" />
     <Compile Include="UlearnDriver\PageObjects\QuizBlock.cs" />
@@ -102,12 +102,12 @@
     <Compile Include="UlearnDriver\Pages\UlearnPage.cs" />
     <Compile Include="UlearnDriver\ULearnConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SELENIUM_TESTS_1\DB_test_code.cs" />
-    <Compile Include="SELENIUM_TESTS_1\FirstTest.cs" />
-    <Compile Include="Tests\LoginTest.cs" />
-    <Compile Include="Tests\NavArrowTest.cs" />
-    <Compile Include="Tests\TestRateButton.cs" />
-    <Compile Include="Tests\TOCModelCreateTest.cs" />
+    <Compile Include="UlearnTests\DB_test_code.cs" />
+    <Compile Include="UlearnTests\FirstTest.cs" />
+    <Compile Include="UlearnTests\LoginTest.cs" />
+    <Compile Include="UlearnTests\NavArrowTest.cs" />
+    <Compile Include="UlearnTests\TestRateButton.cs" />
+    <Compile Include="UlearnTests\TOCModelCreateTest.cs" />
     <Compile Include="UlearnDriver\UlearnDriver.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +142,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SeleniumTests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
