--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -55,6 +55,9 @@
     <Reference Include="Bitrium.Http.Extensions">
       <HintPath>..\packages\Bitrium.Http.Extensions.1.1.0\lib\portable-net45+sl50\Bitrium.Http.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="CsSandboxApi">
+      <HintPath>..\External\CsSandbox\CsSandboxApi.dll</HintPath>
+    </Reference>
     <Reference Include="Elmah, Version=1.2.14318.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\elmah.corelibrary.1.2.1\lib\Elmah.dll</HintPath>
@@ -228,16 +231,8 @@
     <Compile Include="Controllers\SlideNavigationController.cs" />
     <Compile Include="Controllers\ExerciseController.cs" />
     <Compile Include="Controllers\HintController.cs" />
-    <Compile Include="CsSandboxClient\CsSandboxClient.cs" />
-    <Compile Include="CsSandboxClient\CsSandboxClient.Settings.Sample.cs" />
-    <Compile Include="CsSandboxClient\CsSandboxClient.Settings.cs" />
-    <Compile Include="CsSandboxClient\CsSandboxClientException.cs" />
-    <Compile Include="CsSandboxClient\PublicSubmissionDetails.cs" />
-    <Compile Include="CsSandboxClient\Submission.cs" />
-    <Compile Include="CsSandboxClient\SubmissionModel.cs" />
-    <Compile Include="CsSandboxClient\SubmissionStatus.cs" />
-    <Compile Include="CsSandboxClient\Verdict.cs" />
     <Compile Include="DataContexts\TextsRepo.cs" />
+    <Compile Include="ExecutionService\CsSandboxService.Settings.Sample.cs" />
     <Compile Include="Ideone\ExecutionService.Settings.cs" />
     <Compile Include="ExecutionService\IdeoneService.cs" />
     <Compile Include="ExecutionService\StringExtention.cs" />
@@ -818,6 +813,7 @@
     <Content Include="flexslider\fonts\flexslider-icon.ttf" />
     <Content Include="flexslider\fonts\flexslider-icon.woff" />
     <Content Include="flexslider\README.mdown" />
+    <Compile Include="ExecutionService\CsSandboxService.Settings.cs" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
