--- a/src/Selenium/App.config
+++ b/src/Selenium/App.config
@@ -17,6 +17,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=C:\Users\213\Desktop\GitHub\uLearn\src\uLearn.Web\App_Data\db.mdf;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
