+ quizes of lecture 5

--- a/src/courses/AIML/AIML.csproj
+++ b/src/courses/AIML/AIML.csproj
@@ -136,6 +136,7 @@
     <Content Include="Slides\L03 - Нечеткие множества\QuizImg1.png" />
     <Content Include="Slides\L03 - Нечеткие множества\S99 - Quiz.quiz.xml" />
     <Content Include="Slides\L03 - Нечеткие множества\Title.txt" />
+    <Content Include="Slides\L04 - Нечеткие вывод и арифметика\S99 - Quiz.quiz.xml" />
     <Content Include="Slides\L04 - Нечеткие вывод и арифметика\Title.txt" />
     <Content Include="Slides\L05 - Нечеткое управление\Title.txt" />
     <Content Include="Slides\Title.txt" />
