--- a/src/Selenium/Selenium.csproj
+++ b/src/Selenium/Selenium.csproj
@@ -82,28 +82,33 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainClass.cs" />
+    <Compile Include="SeleniumTests\ExercisePageShould.cs" />
+    <Compile Include="SeleniumTests\SignInPageShould.cs" />
+    <Compile Include="SeleniumTests\StartPageShould.cs" />
+    <Compile Include="SeleniumTests\TocShould.cs" />
     <Compile Include="SeleniumTests\UlearnDriverTest.cs" />
-    <Compile Include="UlearnDriver\PageObjects\Hint.cs" />
-    <Compile Include="UlearnDriver\PageObjects\LikeButton.cs" />
-    <Compile Include="UlearnDriver\PageObjects\QuizBlock.cs" />
-    <Compile Include="UlearnDriver\PageObjects\RunResult.cs" />
-    <Compile Include="UlearnDriver\PageObjects\SomeoneSolution.cs" />
-    <Compile Include="UlearnDriver\Pages\ExerciseSlidePage.cs" />
-    <Compile Include="UlearnDriver\PageObjects\NavArrows.cs" />
-    <Compile Include="UlearnDriver\PageObjects\Rate.cs" />
-    <Compile Include="UlearnDriver\Pages\QuizSlidePage.cs" />
-    <Compile Include="UlearnDriver\Pages\SignInPage.cs" />
-    <Compile Include="UlearnDriver\Pages\SlidePage.cs" />
-    <Compile Include="UlearnDriver\Pages\SolutionsPage.cs" />
-    <Compile Include="UlearnDriver\Pages\StartPage.cs" />
-    <Compile Include="UlearnDriver\PageObjects\Toc.cs" />
-    <Compile Include="UlearnDriver\PageObjects\TocUnit.cs" />
-    <Compile Include="UlearnDriver\Pages\UlearnContentPage.cs" />
-    <Compile Include="UlearnDriver\Pages\UlearnPage.cs" />
-    <Compile Include="UlearnDriver\ULearnConstants.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\Hint.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\LikeButton.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\QuizBlock.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\RunResult.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\SomeoneSolution.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\ExerciseSlidePage.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\NavArrows.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\Rate.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\QuizSlidePage.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\RegistrationPage.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\SignInPage.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\SlidePage.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\SolutionsPage.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\StartPage.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\Toc.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\TocUnit.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\UlearnContentPage.cs" />
+    <Compile Include="UlearnDriverComponents\Pages\UlearnPage.cs" />
+    <Compile Include="UlearnDriverComponents\ULearnConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeleniumTests\DBtest.cs" />
-    <Compile Include="UlearnDriver\UlearnDriver.cs" />
+    <Compile Include="UlearnDriverComponents\UlearnDriver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
