add interfaces! more pretty code ^^

--- a/src/Selenium/Selenium.csproj
+++ b/src/Selenium/Selenium.csproj
@@ -84,20 +84,25 @@
     <Compile Include="MainClass.cs" />
     <Compile Include="SeleniumTests\ContentPageShould.cs" />
     <Compile Include="SeleniumTests\ExercisePageShould.cs" />
+    <Compile Include="SeleniumTests\QuizPageShould.cs" />
     <Compile Include="SeleniumTests\SignInPageShould.cs" />
     <Compile Include="SeleniumTests\SlidePageShould.cs" />
     <Compile Include="SeleniumTests\StartPageShould.cs" />
     <Compile Include="SeleniumTests\TocShould.cs" />
     <Compile Include="SeleniumTests\UlearnDriverTest.cs" />
     <Compile Include="UlearnDriverComponents\Db.cs" />
-    <Compile Include="UlearnDriverComponents\IObservable.cs" />
-    <Compile Include="UlearnDriverComponents\IObserver.cs" />
-    <Compile Include="UlearnDriverComponents\IToc.cs" />
+    <Compile Include="UlearnDriverComponents\Interfaces\IObservable.cs" />
+    <Compile Include="UlearnDriverComponents\Interfaces\IObserver.cs" />
+    <Compile Include="UlearnDriverComponents\Interfaces\ITocSlide.cs" />
+    <Compile Include="UlearnDriverComponents\Interfaces\IToc.cs" />
+    <Compile Include="UlearnDriverComponents\Interfaces\IUlearnDriver.cs" />
+    <Compile Include="UlearnDriverComponents\Interfaces\ITocUnit.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\Hint.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\LikeButton.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\QuizBlock.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\RunResult.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\SomeoneSolution.cs" />
+    <Compile Include="UlearnDriverComponents\PageObjects\TocSlide.cs" />
     <Compile Include="UlearnDriverComponents\Pages\ExerciseSlidePage.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\NavArrows.cs" />
     <Compile Include="UlearnDriverComponents\PageObjects\Rate.cs" />
